2011-08-29	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* bootcard.c: Correct printk() format.

2011-07-21	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* include/uart-output-char.h, src/uart-output-char.c: Support for
	getchark().

2011-07-13	Joel Sherrill <joel.sherrilL@OARcorp.com>

	PR 1824/cpukit
	* bootcard.c, bspclean.c, include/bootcard.h: Return exit/shutdown
	status back to boot_card(). boot_card() propagates this to
	bsp_cleanup() and returns it to the assembly that started the
	application.

2011-03-21	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* console.c: Make device file optional.

2011-03-16	Jennifer Averett <jennifer.averett@OARcorp.com>

	PR 1729/cpukit
	* smp/getcpuid.c, smp/smp_stub.c: New files.

2011-02-28	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* console.c: Register also normal device file of the console device.
	Call initialization before the device file registration.

2011-02-09	Ralf Corsépius <ralf.corsepius@rtems.org>

	* timerstub.c: Include <rtems/btimer.h>.
	Fix benchmark_timer_read() definition.

2011-02-01	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* console.c: Flow control is optional.

2011-01-27	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* shared/bspgetworkarea.c: Use BSP_DISABLE_UBOOT_WORK_AREA_CONFIG and
	BSP_INTERRUPT_STACK_AT_WORK_AREA_BEGIN options.

2010-12-30	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* shared/bspgetworkarea.c: Include <bsp/u-boot.h> if necessary.
	* shared/include/u-boot.h, shared/src/bsp-uboot-board-info.c: New
	files.

2010-10-14	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* include/utility.h: Renamed macros.

2010-09-08	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* include/utility.h: More macros.  Changed casts.

2010-08-15	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* src/uart-output-char.c: Add BSP_poll_char.

2010-07-27	Sebastian Huber <sebastian.huber@embedded-brains.de>
