@@ -1,3 +1,8 @@
+2011-08-30	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* bootcard.c: Revert patch and add comment clarifying code and need for
+	cast.
+
 2011-08-29	Joel Sherrill <joel.sherrilL@OARcorp.com>
 
 	* bootcard.c: Correct printk() format.
